[gd_scene load_steps=5 format=3 uid="uid://c58yspxllteqr"]

[ext_resource type="Script" uid="uid://cwlqpivbl7yqa" path="res://addons/rts_framework/features/vision/vision_manager.gd" id="1_m01pg"]
[ext_resource type="PackedScene" uid="uid://clbjgy724q2si" path="res://addons/rts_framework/features/vision/dynamic_circle_2d.tscn" id="2_7q840"]

[sub_resource type="Shader" id="Shader_w8nhr"]
code = "shader_type canvas_item;

uniform float blurr_factor : hint_range(0.0, 10.0) = 2.0;
uniform bool remove_alpha = true;
uniform bool overlay = true;

uniform sampler2D screen_texture : hint_screen_texture, filter_linear_mipmap;

void fragment()
{
  vec4 blurred_color;
  if (overlay)
  {
    blurred_color = textureLod(screen_texture, SCREEN_UV, blurr_factor);
  }
  else
  {
    blurred_color = textureLod(TEXTURE, UV, blurr_factor);
  }
  if (remove_alpha)
  {
    COLOR.rgb = blurred_color.rgb;
  }
  else
  {
    COLOR = blurred_color;
  }
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jyswr"]
shader = SubResource("Shader_w8nhr")
shader_parameter/blurr_factor = 1.0
shader_parameter/remove_alpha = false
shader_parameter/overlay = true

[node name="VisionManager" type="Node"]
script = ExtResource("1_m01pg")
metadata/_custom_type_script = "uid://cg181bb316phb"

[node name="CombinedViewport" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
size = Vector2i(500, 500)
render_target_update_mode = 4

[node name="Background" type="ColorRect" parent="CombinedViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FogViewportContainer" type="SubViewportContainer" parent="CombinedViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FogViewport" type="SubViewport" parent="CombinedViewport/FogViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(500, 500)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="EditorOnlyCircle" parent="CombinedViewport" instance=ExtResource("2_7q840")]
position = Vector2(30, 30)
radius = 25

[node name="Revealer" type="ColorRect" parent="CombinedViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlurrOverlay" type="ColorRect" parent="CombinedViewport"]
material = SubResource("ShaderMaterial_jyswr")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VisibilityField" type="Area3D" parent="."]
